--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,56 +1,67 @@
-# compiled output
-/dist
+# --- Dependencies ---
+node_modules
 /node_modules
+.pnp
+.pnp.js
+
+# --- Builds & Output ---
+dist
+build
+/dist
 /build
 
-# Logs
+# --- Logs ---
 logs
 *.log
 npm-debug.log*
-pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 lerna-debug.log*
 
-# OS
+# --- OS Generated Files ---
 .DS_Store
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 
-# Tests
-/coverage
-/.nyc_output
+# --- Tests ---
+coverage
+.nyc_output
 
-# IDEs and editors
-/.idea
+# --- IDEs ---
+.idea
 .project
 .classpath
 .c9/
 *.launch
 .settings/
 *.sublime-workspace
+*.swp
 
-# IDE - VSCode
+# --- VSCode ---
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 
-# dotenv environment variable files
+# --- Environment Variables (VERY IMPORTANT) ---
 .env
 .env.development.local
 .env.test.local
 .env.production.local
 .env.local
+.env.*
 
-# temp directory
+# --- Temporary Files ---
 .temp
 .tmp
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# --- NestJS Specific ---
+# Sometimes Nest creates these
+tsconfig.build.tsbuildinfo
 
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+# --- Supabase ---
+# If you use Supabase CLI later, ignore local config but keep config.toml
+supabase/tmp
