--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,67 @@
-node_modules/
-dist/
-build/
-.env
+# --- Dependencies ---
+node_modules
+/node_modules
+.pnp
+.pnp.js
+
+# --- Builds & Output ---
+dist
+build
+/dist
+/build
+
+# --- Logs ---
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# --- OS Generated Files ---
 .DS_Store
-.vscode/
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# --- Tests ---
+coverage
+.nyc_output
+
+# --- IDEs ---
+.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+*.swp
+
+# --- VSCode ---
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# --- Environment Variables (VERY IMPORTANT) ---
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+.env.*
+
+# --- Temporary Files ---
+.temp
+.tmp
+
+# --- NestJS Specific ---
+# Sometimes Nest creates these
+tsconfig.build.tsbuildinfo
+
+# --- Supabase ---
+# If you use Supabase CLI later, ignore local config but keep config.toml
+supabase/tmp
